@@ -1,6 +1,7 @@
 X   1.2
     * Respect WorldGuard protection
     * Add spawnersUnstackable config option (default false) 
+    * Add mob and entity IDs from Rancraft Penguins 1.1c in config.yml
 
 2012-03-11  1.1a
     * Add ocelot and iron golem
